crates/ui/src/screens/battle/snapshots/trpg_ui__screens__battle__turn_tests__unit_list.snap
---
source: crates/ui/src/screens/battle/turn_tests.rs
expression: "render(&s, &c).to_snapshot(&c.palette)"
---
                                                                      ┌────────────────────────────┐
                                                                      │ Plain                      │
                                                                      │ DEF +0  AVO +0             │
                                                                      │                            │
                                                                      │                            │
                                                                      │ Test Lord                  │
                                                                      │ Exile  Lv 1                │
                                                                      │ HP 19/19   ██████████      │
                                                                      │ Player                     │
                                                                      │                            │
                                                                      │                            │
                    ≈≈≈≈≈≈≈≈≈≈....♣♣♣♣♠♠♠♠^^^^▲▲                      │                            │
                   ┌──────────────────────────────┐                   │                            │
                   │ Test Lord    HP 19/19  ready │                   │                            │
                   │ Test Knight  HP 20/20  ready │                   │                            │
                   │ Test Archer  HP 17/17  ready │                   │                            │
                   └──────────────────────────────┘                   │                            │
                    ♣♣♣♣··..Kn........▓▓░░░░▓▓..                      │                            │
                    ♣♣♠♠··............▓▓▓▓▐▌▓▓..                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      └────────────────────────────┘
                                                     w danger zone: OFF · Shift+Space auto-end: OFF 
 arrows choose · f confirm · d back                                                        F2 debug 
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabcdddddccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabceeeeeeeeeccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccffffffffffccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabcggggggcccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaahhhhhhiiiijjjjkkkkllllmmmmnnaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaboooooooooooooooooooooooooooooobaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccccbaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccccbaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaakkkkppjjqqjjjjjjjjrrssssrrjjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaakkllppjjjjjjjjjjjjrrrrttrrjjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaauuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuua
auuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaauuuuuuuua
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text bg:panel_bg
d = fg:text_highlight bg:panel_bg
e = fg:player bg:panel_bg
f = fg:hp_high bg:panel_bg
g = fg:text_dim bg:panel_bg
h = fg:water bg:sea
i = fg:water bg:water_bg
j = fg:grass bg:grass_bg
k = fg:forest bg:forest_bg
l = fg:thicket bg:thicket_bg
m = fg:mountain bg:mountain_bg
n = fg:peak bg:peak_bg
o = fg:panel_bg bg:panel_border_focus
p = fg:road bg:road_bg
q = fg:player bg:grass_bg
r = fg:stone bg:stone_bg
s = fg:floor bg:floor_bg
t = fg:wood bg:stone_bg
u = fg:text_dim bg:black
--- overlays ---
over  224,286 16x2  hp_high
